# sunshine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
sunshine/: CMakeLists.txt  package.xml
sunshine/common/: adrost_utils.hpp  colors.hpp  csv.hpp  image_utils.hpp  ros_conversions.hpp  sunshine_adapters.hpp  sunshine_types.hpp  utils.hpp  word_coloring.hpp
sunshine/include/sunshine/: 2d_adapter.hpp  benchmark.hpp  depth_adapter.hpp  image_preprocessor.hpp  observation_transform_adapter.hpp  rost_adapter.hpp  segmentation_adapter.hpp  semantic_label_adapter.hpp  visual_word_adapter.hpp  word_depth_adapter.hpp
sunshine/include/sunshine/common/: adrost_utils.hpp  colors.hpp  csv.hpp  data_proc_utils.hpp  image_processing.hpp  image_utils.hpp  matching_utils.hpp  metric.hpp  object_stores.hpp  observation_adapters.hpp  observation_types.hpp  parameters.hpp  ros_conversions.hpp  ros_utils.hpp  rosbag_utils.hpp  segmentation_utils.hpp  simulation_utils.hpp  sparse_vector.hpp  sunshine_adapters.hpp  sunshine_types.hpp  thread_pool.hpp  topic_map_utils.hpp  utils.hpp  word_coloring.hpp
sunshine/launch/: .test-imwalk.launch.swp  bluerov-2d.launch  bluerov-bag-tf.launch  bluerov-bag.launch  bluerov.launch  desktop.launch  multiagent_replay.launch  multiagent_sim.launch  multiagent_sim_2d.launch  multiagent_sim_final.launch  multiagent_sim_ros.launch  panama-adrost.launch  panama.launch  ros_airsim.launch  ros_airsim_bag.launch  save_demo_data.launch  sentry-rnv.launch  sentry.launch  sunshine-bag.launch  sunshine_webcam.launch  sunshine_webcam_viz.launch  test-coralwalk-noviz.launch  test-coralwalk.launch  test-imfollow.launch  test-impublish.launch  test-imwalk-norviz.launch  test-imwalk.launch  test-video.launch  test.launch  warpauv_bag.launch
sunshine/nodes/: image_preprocessor.cpp  image_publisher.cpp  image_walk.cpp  label_extractor.cpp  label_extractor_node.cpp  model_translator.cpp  model_translator.hpp  multi_agent_sim.cpp  topic_model_node.cpp  topic_model_node.hpp  visual_word_extractor.cpp  word_extractor_node.cpp  word_extractor_node.hpp
sunshine/nodes/visualize/: perplexity_viz.cpp  save_point_cloud_2d.cpp  save_topic_map.cpp  visualize2d.cpp  visualize3d.cpp
sunshine/rviz/: bluerov-altstart.rviz  bluerov.rviz  hermes.rviz  imwalker.rviz  multi_agent_topics.rviz  sentry-zeroz.rviz  sentry.rviz  sunshine-bag.rviz
sunshine/scripts/: analyze_words.py  apply_topic_correspondences.py  compare_matching.py  cull_images.py  expected_tvd.py  make_videos.sh  mavros2transform.py  mutual_information.py  rectify_map.py  test-coralwalk-noviz.sh  timestamps_to_deltas.py  usvi-demo.sh  visualize_multiagent_results.py  visualize_topics_csv.py  visulize_all_topics_csv.py  visulize_topics_csv.py  warpauv_usvi_demo.sh
sunshine/test/: dummy_topic_model.cpp  find_lifting.cpp  image_publisher.cpp  image_walk.cpp  number_words.py  pc_publisher.cpp  test_adapters.cpp  test_optimize.cpp  topic_match.cpp
sunshine/topic_model/: adrost_utils.hpp  model_translator.cpp  model_translator.hpp  rost_adapter.cpp  rost_adapter.hpp  topic_model.cpp  topic_model.hpp  topic_model_node.cpp  topic_model_node.hpp
sunshine/utilities/: batch_color_correct.cpp  find_lifting.cpp  image_publisher.cpp  multi_agent_sim.cpp  rost_optimize.cpp  sunshine_eval.cpp  topic_match.cpp
sunshine/vision/: depth_adapter.cpp  segmentation_label_adapter.cpp  visual_word_adapter.cpp  visual_word_extractor.cpp  word_depth_adapter.cpp
sunshine/visualize/: mutual_info.cpp  perplexity_viz.cpp  save_point_cloud_2d.cpp  save_topic_map.cpp  visualize2d.cpp  visualize3d.cpp
sunshine_ext/: CMakeLists.txt  package.xml
sunshine_ext/pc_publisher/: pc_publisher.cpp
sunshine_msgs/: CMakeLists.txt  package.xml
sunshine_msgs/msg/: LocalSurprise.msg  TopicMap.msg  TopicMatches.msg  TopicModel.msg  WordObservation.msg
sunshine_msgs/srv/: GetTopicMap.srv  GetTopicSummary.srv  MatchModels.srv  MergeModels.srv
utils/: adrost_mission_1.sh  adrost_mission_2.sh  adrost_mission_combined.sh  adrost_mission_new.sh  collect_topic_models.sh  match_all.sh  match_experiments.sh  mutual_info  panama_adrost.sh  process_multiagent.py  replicate_adrost.sh  run_analysis.sh  run_test.sh  test_runner.sh
utils/eval-results/: add.sh  visualize.py
utils/eval-results/2020-06-07-70e1ea4610e304615c579e21fc3b34baa6afd4c4/warp-Aurora_2020-06-03_00_23_44_2809/: processed_observations.csv
utils/eval-results/2020-06-10-aae83657ed78c8d9ad7c774952df899badab6c84/warp-Aurora_2020-06-10_12_49_29_6910/: processed_observations-v2.csv
utils/eval-results/2020-07-17-c716f7d94a1f990196bd41b1a8ee9dd65928b53a/warp-Aurora_2020-07-17_22_30_53_17101/: processed_observations-v3.csv  raw_results.txt
utils/eval-results/2020-07-19-777e4941ddc4c47da9abdf6338388a92d7eabf73/warp-Aurora_2020-07-19_17_47_19_29429/: processed_observations-v4.csv  raw_results.txt
utils/eval-results/2020-07-21-2d0fb2452ab322b448f3a691a7bb48e41111712c/warp-Aurora_2020-07-21_23_34_51_30866/: processed_observations-v4.csv  raw_results.txt
utils/eval-results/2020-08-31-336b95d7e15682eb9b1754ec7e23d2f5135817a5/warp-Aurora_2020-08-31_15_42_51_15666/: processed_observations-v5.csv  raw_results.txt
utils/eval-results/2020-08-31-336b95d7e15682eb9b1754ec7e23d2f5135817a5/warp-Aurora_2020-08-31_15_48_34_17920/: processed_observations-v5.csv  raw_results.txt
utils/eval-results/2020-08-31-336b95d7e15682eb9b1754ec7e23d2f5135817a5/warp-Aurora_2020-09-07_17_08_48_25482/: processed_observations-v6.csv  raw_results_3.txt
utils/eval-results/2020-10-07-7e01ccd705f48601061c5fa631094661587fee5e/warp-Aurora_2020-10-07_16_54_50_20746/: raw_results_7.txt
utils/eval-results/2020-10-12-0b6cafe01749c5cae1bb5aa19d73ab1530a8474b/warp-Aurora_2020-10-09_09_29_42_23126/: raw_results_8.txt
utils/eval-results/2020-10-12-0b6cafe01749c5cae1bb5aa19d73ab1530a8474b/warp-Aurora_2020-10-09_11_23_08_28248/: raw_results_1602256988.txt
utils/eval-results/2020-10-12-0b6cafe01749c5cae1bb5aa19d73ab1530a8474b/warp-Aurora_2020-10-10_10_46_54_16229/: raw_results_1602341214.txt
(+1 files in other folders)
