<?xml version="1.0"?>
<package format="2">
  <name>sunshine_msgs</name>
  <version>0.0.0</version>
  <description>Definition of the Sunshine  message types.</description>
  <maintainer email="sjamieson@whoi.edu">Stewart Jamieson</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>

